--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -18,7 +18,7 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Shared" badge="4" badge-style="badge-assertive" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world" href="#/tab/chats">
+  <ion-tab title="Shared" badge="badgeCount" ng-controller="ChatsCtrl" badge-style="badge-assertive" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
