--- a/public/templates/tab-dash.html
+++ b/public/templates/tab-dash.html
@@ -1,11 +1,10 @@
 <ion-view view-title="Dashboard">
-  <ion-content class="">
+  <ion-content>
+    <div class="list">
 
-  <div class="list">
-
-    <div class="item item-divider">
-      This Week
-    </div>
+      <div class="item item-divider">
+        This Week
+      </div>
 
       <ion-checkbox ng-repeat="userTask in userTasks" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
         <div class="tasks">
@@ -16,51 +15,29 @@
             {{userTask.task.due_date}}
           </div>
           <div class="course-title">
-            {{userTask.task.class.title}}
+            {{userTask.task.class.name}}
           </div>
         </div>
-<!-- 
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button> -->
       </ion-checkbox>
 
-      <ion-checkbox ng-model="a"><div class="tasks"><div class="task-title">Assignment #5</div><div class= "date-title">Thursday</div><div class= "course-title">COGS120</div></div>
-      </ion-checkbox>
-
-      <div class="task">
-      <ion-checkbox ng-model="a"><div class="tasks"><div class="task-title">Assignment #5</div><div class= "date-title">Thursday</div><div class= "course-title">COGS120</div></div>
-      </ion-checkbox>
+      <div class="item item-divider">
+        Upcoming
       </div>
-  <ion-checkbox ng-model="b"><div class="tasks"><div class="task-title">Reading Guide #1</div><div class= "date-title">Thursday</div><div class= "course-title">COGS102B</div></div></ion-checkbox>
 
-  <ion-checkbox ng-model="c"><div class="tasks"><div class="task-title">Midterm I</div><div class= "date-title">Friday</div><div class= "course-title">POLI 28</div></div></ion-checkbox>
+      <ion-checkbox ng-repeat="userTask in userTasks" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
+        <div class="tasks">
+          <div class="task-title">
+            {{userTask.task.name}}
+          </div>
+          <div class="date-title">
+            {{userTask.task.due_date}}
+          </div>
+          <div class="course-title">
+            {{userTask.task.class.name}}
+          </div>
+        </div>
+      </ion-checkbox>
 
-    <div class="item item-divider">
-      Upcoming
     </div>
-
-
-  <ion-checkbox ng-model="aa"><div class="tasks"><div class="task-title">Homework 2.1-2.14, 3.1</div><div class= "date-title">2/04/15</div><div class= "course-title">MATH20F</div></div></ion-checkbox>
-  <ion-checkbox ng-model="bb"><div class="tasks"><div class="task-title">Lab #6</div><div class= "date-title">2/13/15</div><div class= "course-title">COGS120</div></div></ion-checkbox>
-
-  <ion-checkbox ng-model="cc"><div class="tasks"><div class="task-title">Study Guide Due</div><div class= "date-title">2/28/15</div><div class= "course-title">COGS102B</div></div></ion-checkbox>
- <!-- <ion-checkbox ng-model="dd">Checkbox Label</ion-checkbox>
-  <ion-checkbox ng-model="ee">Checkbox Label</ion-checkbox>
-
-  <ion-checkbox ng-model="ff">Checkbox Label</ion-checkbox>
-  <ion-checkbox ng-model="gg">Checkbox Label</ion-checkbox>
-  <ion-checkbox ng-model="hh">Checkbox Label</ion-checkbox>
-
-  <ion-checkbox ng-model="ii">Checkbox Label</ion-checkbox> -->
-
-
-  </div>
-
   </ion-content>
 </ion-view>
