--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -20,6 +20,7 @@
 
 
   <!-- ionic/angularjs js -->
+  <script src="jquery/dist/jquery.js"></script>
   <script src="ionic/js/ionic.bundle.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
