added addClass page

--- a/public/templates/tab-account.html
+++ b/public/templates/tab-account.html
@@ -14,7 +14,7 @@
                Enrolled Classes
             </div>
 
-            <a class="item item-icon-left" href="#">
+            <a class="item item-icon-left" href="#/tab/account/addClass">
               <i class="icon ion-ios-plus-outline"></i>
                Add Class
             </a>
