Added plus sign in addClass

--- a/public/templates/account-addClass.html
+++ b/public/templates/account-addClass.html
@@ -1,6 +1,6 @@
 <ion-view view-title="AddClass">
   <ion-content class="padding">
-  
+
     <ion-list> 
       <div class="list list-inset">
         <label class="item item-input">
@@ -10,13 +10,20 @@
       </div>
 
       <ion-list>
-        <a class="item">
-          CSE 167
-        </a>
+        <div class="search-results">
 
-        <a class="item">
-          VIS 40
-        </a>
+          <a class="item item-icon-right" href="#">
+            <i class="icon ion-ios-plus-outline"></i>
+             CSE 167
+          </a>
+
+          <a class="item item-icon-right" href="#">
+            <i class="icon ion-ios-plus-outline"></i>
+             CSE 168
+          </a>
+
+
+        </div>
       </ion-list>
 
 
