--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -10,24 +10,25 @@
 
 			<div class="list">
  			 <label class="item item-input">
-  		  <input type="text" placeholder="Task Name">
+  		  <input type="text" ng-model="task.name" placeholder="Task Name">
  			 </label>
 
 				<label class="item item-input item-select" style = "height: 47px;">
 					<span class="date">Class</span>
-					<select name ="select_projects">
-						<option>COGS120</option>
-						<option>CSE132A</option>
+					<select name="select_projects" ng-model="task.class_id">
+						<option value=0>COGS120</option>
+						<option value=1>CSE124</option>
+						<option value=3>POLI20</option>
 					</select>
 				</label>
 
 				<label class="item item-input">
 					<span class="date">Due Date</span>
-					<input type="date" placeholder="Due Date">
+					<input id="due_date" type="date" ng-model="task.due_date" placeholder="yyyy-MM-dd">
 				</label>
 
 				<label class="item item-input">
-					<textarea placeholder="Additional Info" style="height:100px;"></textarea>
+					<textarea ng-model="task.description" placeholder="Additional Info" style="height:100px;"></textarea>
 				</label>
 			</div>
 		</div>
@@ -41,7 +42,7 @@
 			<ion-item class="item-toggle">
 				Share with Class
 				<label class="toggle">
-					<input type="checkbox" ng-model="settings.enableShare">
+					<input type="checkbox" ng-model="task.is_shared">
 					<div class="track">
 						<div class="handle"></div>
 					</div>
@@ -49,7 +50,7 @@
 			</ion-item>
 		</div>	 
 	
-		<div class="submitButton">
+		<div ng-click="addTask(task)" class="submitButton">
 			<button class="button button-block button-calm" style="font-size:18px">
 			Add Task
 		</button>
