--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -8,8 +8,8 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Tasks" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Tasks" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/tasks">
+    <ion-nav-view name="tab-tasks"></ion-nav-view>
   </ion-tab>
 
     <!-- Add Task Tab -->
