--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,14 +24,14 @@
         <div class="login">
             <div class="login-information">
                 <ul>
-               <li><input type="text" placeholder="username"></li> 
+               <li><input type="text" placeholder="email"></li> 
                 <br>
                 <li><input type ="password" placeholder="password"></li>
                     </ul>
                 </div>
             <div class="login-button">
-                <a href="/" id="loginbutton">Log In</a>
-                <a href="#" id="signupbutton">Sign Up</a>
+                <a href="/" class="loginbutton">LOG IN</a>
+                <a href="/signup" id="signupbutton">SIGN UP</a>
             
             </div>
         </div>
