--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -24,7 +24,12 @@
 
 				<label class="item item-input">
 					<span class="due-date">Due Date</span>
-					<input id="due_date" type="date" ng-model="task.due_date" placeholder="yyyy-MM-dd">
+					<input id="due_date" type="date" ng-model="task.due_date" placeholder="yyyy-MM-dd"/>
+				</label>
+
+				<label class="item item-input">
+					<span class="due-time">Time</span>
+					<input id="due_time" type="time" ng-model="task.due_time"/>
 				</label>
 
 				<label class="item item-input">
