--- a/public/templates/tab-account.html
+++ b/public/templates/tab-account.html
@@ -42,9 +42,9 @@
        </a>-->
        <!-- Log out Button -->
       <div class="LogOutButton">
-        <button class="button button-block button-calm">
+        <a href="/logout" class="button button-block button-calm">
           Log Out
-        </button>
+        </a>
       <div>
 
 
