--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -5,6 +5,7 @@
     <!-- Completed Tasks -->
       <div class="item item-divider">
         Archived
+        <a class="item-archived item-icon-right"><i class="icon ion-ios-arrow-down"></i></a>
       </div>
 
       <ion-checkbox ng-repeat="userTask in archived" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
@@ -24,6 +25,7 @@
     <!-- This Week -->
       <div class="item item-divider">
         This Week
+        <a class="item-thisweek item-icon-right"><i class="icon ion-ios-arrow-right"></i></a>
       </div>
 
       <!-- This Week Task -->
@@ -54,6 +56,7 @@
       <!-- Upcoming -->
       <div class="item item-divider">
         Upcoming
+        <a class="item-upcoming item-icon-right"><i class="icon ion-ios-arrow-right"></i></a>
       </div>
 
       <!-- Upcoming Task -->
