--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,9 +25,11 @@
         <div class="login">
             <div class="login-information">
                 <ul>
-                    <li><input name="email" type="text" placeholder="email"></li> 
-                    <br>
-                    <li><input name="password" type ="password" placeholder="password"></li>
+                    <form>
+                        <li><input name="email" type="text" placeholder="email"></li> 
+                        <br>
+                        <li><input name="password" type ="password" placeholder="password"></li>
+                    </form>
                 </ul>
             </div>
             <div class="login-button">
