--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -28,11 +28,13 @@
 		<div class="login">
 			<div class="login-information">
 				<ul>
-					<li><input type="text" placeholder="NAME"></li> 
-					<br>
-					<li><input type="text" placeholder="EMAIL"></li> 
-					<br>
-					<li><input type ="password" placeholder="PASSWORD"></li>
+					<form>
+						<li><input name="name" type="text" placeholder="NAME"></li> 
+						<br>
+						<li><input name="email" type="text" placeholder="EMAIL"></li> 
+						<br>
+						<li><input name="password" type ="password" placeholder="PASSWORD"></li>
+					</form>
 				</ul>
 			</div>
 			<div class="signup-button">
