--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -39,6 +39,7 @@
 /* Main Task Page */
 .ion-chevron-down {
     float:right;
+    margin-top: -35px;
 }
 
 .ion-ios-plus-outline {
@@ -55,7 +56,10 @@
 .tasks {
     padding-top:5px;
     margin-top: -3px;
+    width:90%;
+    margin-right: 0px;
 }
+
 
 
 .course-title {
@@ -82,6 +86,7 @@
 .task-details {
     background-color: orange;
 }
+
 
 /* Add Task Page */
 
