Implemented Sign Up

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,6 +19,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans|Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<form class="signup" method="post">
 	<div class="signup">
 		<div class="sign-up-bar">
 			<div id="sign-up-header">
@@ -39,11 +40,11 @@
 			</div>
 			<div class="signup-button">
 			<a href="/login" class="loginbutton">GO BACK</a>
-			<a href="/signup" id="sign-up-email">SIGN UP</a>
+			<input type="submit" value="SIGN UP" class="signupbutton"></input>
 
 			</div>
 		</div>
-
+	</form>
 	</div>
 </body>
 </html>
