--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -37,15 +37,7 @@
 
 
 /* Main Task Page */
-.ion-chevron-down {
-    float:right;
-    margin-top: -35px;
-}
 
-.ion-ios-plus-outline {
-    font-size: 22px;
-    float: right;
-}
 
 .task-title {
     font-size:18px;
@@ -56,11 +48,9 @@
 .tasks {
     padding-top:5px;
     margin-top: -3px;
-    width:90%;
     margin-right: 0px;
+    width:97%;
 }
-
-
 
 .course-title {
     font-size:14px;
@@ -92,8 +82,6 @@
 
 input[type="text"], textarea {
     font-family: 'Open Sans';
-    font-size: 16px;
-    font-color: #444;
 }
 
 
@@ -108,16 +96,18 @@ input[type="time"] {
 	display: inline;
 	position: relative;
 	width: 40px;
-
+    color: #444;
 }
 
 .date {
 	display: inline;
+    color: #444;
 }
 
 .due-date {
     font-size: 16px;
     font-family: 'Open Sans';   
+    color: #444;
 }
 
 #due_date {
@@ -141,5 +131,13 @@ input[type="time"] {
 	padding-bottom: 10px;
 }
 
+.item-checkbox .checkbox {
+position: absolute;
+top: 35%;
+right: 8px;
+left: 8px;
+z-index: 3;
+margin-top: -21px;
+}
 
 
