--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -14,6 +14,18 @@ body {
     padding-top: 80px;
 }
 
+.login h2 {
+  font-family: 'Open Sans';
+  text-align: center;
+  color: #444;
+  font-size: 18px;
+  width:233px;
+  margin: 0 auto;
+
+
+}
+
+
 .login {
     padding: 40px;
     position: relative;
