Change the format of the homepage
Be happy Ho-Wei<3 Don’t stress out so much

--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -68,14 +68,14 @@
 	font-family: 'Open Sans';
 }
 
-.task-detail-arrow {
-    float: right;
-    background-color: red;
+.detail-header {
+    font-size: 14px;
 }
 
-.task-details {
-    background-color: orange;
+.detail {
+    font-size: 12px;
 }
+
 
 
 /* Add Task Page */
