--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -30,6 +30,8 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
+  <script scr="js/task.js"></script>
+
 
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
