--- a/public/templates/tab-account.html
+++ b/public/templates/tab-account.html
@@ -4,7 +4,13 @@
      
        <ion-item>
         <div class="email">
-           Email:<p class="user-email">student@ucsd.edu</p>
+           Name:<p class="user-email">{{user.name}}</p>
+          </div>
+        </ion-item>
+
+       <ion-item>
+        <div class="email">
+           Email:<p class="user-email">{{user.email}}</p>
           </div>
         </ion-item>
 
@@ -19,20 +25,11 @@
                Add Class
             </a>
 
-            <div class="item">
-              COGS 120
-              <a class="trash-icon item-icon-right"><i class="icon ion-ios-close-outline"></i></a>
+            <div ng-repeat="class in classes" class="item">
+              {{class.name}}
+              <a ng-click="deleteClass(class)" class="trash-icon item-icon-right"><i class="icon ion-ios-close-outline"></i></a>
              </div>
 
-            <div class="item">
-              CSE 132A
-              <a class="trash-icon item-icon-right"><i class="icon ion-ios-close-outline"></i></a>
-            </div>
-
-            <div class="item">
-              CSE 125
-               <a class="trash-icon item-icon-right"><i class="icon ion-ios-close-outline"></i></a>
-            </div>
           </div>
        </ion-list>
 
