--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -30,8 +30,8 @@
 					</div>
 	
 				<!-- Drop Down Arrow -->				
-					<i class="ion-chevron-down" style="float:right;
-					margin-top: -39px;" id="dropdown"></i>
+<!-- 					<i class="ion-chevron-down" style="float:right;
+					margin-top: -39px;" id="dropdown"></i> -->
 
 				<!--Detail Content -->
 					<div class="detail">
@@ -70,16 +70,16 @@
 						</div>
 
 					<!-- Drop Down Arrow -->					
-						<i class="ion-chevron-down" style="float:right;
-						margin-top: -36px;" id="dropdown"></i>
+		<!-- 				<i class="ion-chevron-down" style="float:right;
+						margin-top: -36px;" id="dropdown"></i> -->
 
 					<!--Detail Content -->
 						<div class="detail">
 							Detail:   Info! Info! Info!
-							<div class="endorsed">
+<!-- 							<div class="endorsed">
 							 <span class="ion-checkmark-round">{{task.endorsed_message}}</span>
 							</div>          
-						</div>
+ -->						</div>
 					</li>
 
 
@@ -110,15 +110,15 @@
 					</div>
 
 				<!-- Drop Down Arrow -->
-					<i class="ion-chevron-down" style="float:right;
-					margin-top: -39px;" id="dropdown"></i>
+<!-- 					<i class="ion-chevron-down" style="float:right;
+					margin-top: -39px;" id="dropdown"></i> -->
 
 				<!--Detail Content -->
 					<div class="detail">
 								Detail:   Info! Info! Info!
-						<div class="endorsed">
+	<!-- 					<div class="endorsed">
 							 <span class="ion-checkmark-round">{{task.endorsed_message}}</span>
-						</div>          
+						</div>       -->    
 					</div>
 				</li>
 
